2004-03-03  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus.texi: Enclose the iflatex section with iftex.
	(Gnus Unplugged): Use pxref instead of xref.

	* emacs-mime.texi: Enclose the iflatex section with iftex.

2004-03-02  Kevin Greiner <kgreiner@xpediantsolutions.com>

	* emacs-mime.texi: Wrapped documentencoding inside of iflatex as
	documentencoding is not supported by infohack.

	* gnus.texi: Wrapped documentencoding inside of iflatex as
	documentencoding is not supported by infohack.
	Changed file's character coding to utf-8 as the file contains
	characters that can not be encoded using iso-8859-1.
	(Gnus Unplugged): Reference gnus-agent variable.
	(Agent Variables): Added gnus-agent.
	

2004-02-17  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus.texi (X-Face): Add uncompface-use-external.
	(Slow Machine): Ditto.

2004-02-06  Jesper Harder  <harder@ifa.au.dk>

	* gnus-news.texi: dnd attachments.

	* message.texi (MIME): do.

2004-02-03  Reiner Steib  <Reiner.Steib@gmx.de>

	* gnus.texi (Batching Agents): Fixed typo in example.  Reported
	by Hiroshi Fujishima <pooh@nature.tsukuba.ac.jp>.

2004-01-30  Jesper Harder  <harder@ifa.au.dk>

	* gnus.texi: Set documentencoding.

	* emacs-mime.texi: do.

2004-01-27  Simon Josefsson  <jas@extundo.com>

	* emacs-mime.texi (Flowed text): Add.

2004-01-23  Teodor Zlatanov  <tzz@lifelogs.com>

	* gnus.texi (Spam ELisp Package Filtering of Incoming Mail):
	mention spam-split does not modify incoming mail

2004-01-23  Jesper Harder  <harder@ifa.au.dk>

	* gnus.texi (GroupLens): Remove.

2004-01-22  Teodor Zlatanov  <tzz@lifelogs.com>

	* gnus.texi (Spam ELisp Package Sequence of Events): fix typo

2004-01-21  Kevin Greiner <kgreiner@xpediantsolutions.com>

	* gnus.texi (Outgoing Messages, Agent Variables): Add
	gnus-agent-queue-mail and gnus-agent-prompt-send-queue.
	Suggested by Gaute Strokkenes <gs234@srcf.ucam.org>

	* gnus.texi (agent-disable-undownloaded-faces): Replaced with
	agent-enable-undownloaded-faces
