@@ -1,3 +1,10 @@
+2004-03-03  Jesper Harder  <harder@ifa.au.dk>
+
+	* Makefile.in: Add gnus-news.
+
+	* texi2latex.el (latexi-translate): Add gnus-news.
+	(latexi-translate-file): Add @documentencoding.
+
 2004-03-03  Katsumi Yamaoka  <yamaoka@jpl.org>
 
 	* gnus.texi: Enclose the iflatex section with iftex.
